[package]
name = "game_bot"
version = "0.1.0"
edition = "2024"
default-run = "game_bot"


[lib]
name = "game_bot"
path = "src/lib.rs"

[[bin]]
name = "game_bot"
path = "src/main.rs"


[dependencies]
xcap = "0.3"
enigo = "0.2"
device_query="2.1.0"
image="0.25"
opencv = { version = "0.98", default-features = false, features = ["imgproc", "imgcodecs", "clang-runtime"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
chrono = "0.4"
rand="0.8"
ocr-rs = "2.3"
strsim = "0.11"